# kicad-blocks

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  pr-conventional-commits.yml  publish-pypi.yml
.nightshift/: PROMPT.md  ralph-once.sh  ralph.sh
src/kicad_blocks/: block.py  cli.py  config.py  diff.py  kicad_io.py  kikit_config.py  net_map.py  reporter.py  scaffold.py  sync_state.py  transform.py
tests/: test_block.py  test_cli.py  test_cli_subcommands.py  test_config.py  test_diff.py  test_json_output.py  test_kicad_io.py  test_kikit_config.py  test_net_map.py  test_panelize_config_cli.py  test_release_config.py  test_reuse_cli.py  test_scaffold.py  test_sync_cli.py  test_sync_state.py  test_transform.py
tests/fixtures/minimal/: kicad-blocks.toml  main.kicad_sch  minimal.kicad_pcb
tests/fixtures/reuse/source/: source.kicad_pcb
tests/fixtures/reuse/source/sheets/: mcu.kicad_sch
