[project]
name = "kicad-blocks"
version = "0.0.0"
description = "Share schematic sheets across multiple KiCAD projects and reuse their PCB layouts."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Noah Grant" }]
requires-python = ">=3.11"
keywords = ["kicad", "pcb", "eda", "electronics", "hardware"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "click>=8.1.7",
]

[project.scripts]
kicad-blocks = "kicad_blocks.cli:main"

[project.urls]
Homepage = "https://github.com/noahdgrant/kicad-blocks"
Repository = "https://github.com/noahdgrant/kicad-blocks"
Issues = "https://github.com/noahdgrant/kicad-blocks/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pyright>=1.1.380",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_blocks"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--strict-config"]
